fetched shspear.txt

--- a/tinyGPT.ipynb
+++ b/tinyGPT.ipynb
@@ -2,6 +2,15 @@
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!wget https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 10,
       "metadata": {
         "id": "rAjXNwdEIuFs"
