--- a/hands-on.ipynb
+++ b/hands-on.ipynb
@@ -4,11 +4,11 @@
       "cell_type": "code",
       "execution_count": 10,
       "metadata": {
-        "id": "hqAuLPMgBpKz",
-        "outputId": "0cfb3492-6922-467d-c268-d74bbf6db010",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hqAuLPMgBpKz",
+        "outputId": "0cfb3492-6922-467d-c268-d74bbf6db010"
       },
       "outputs": [
         {
@@ -37,11 +37,11 @@
       "cell_type": "code",
       "execution_count": 11,
       "metadata": {
-        "id": "kPWxs_euBpK1",
-        "outputId": "ea5cfc2c-26f5-45b8-b871-608cc3aaaacb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kPWxs_euBpK1",
+        "outputId": "ea5cfc2c-26f5-45b8-b871-608cc3aaaacb"
       },
       "outputs": [
         {
@@ -63,12 +63,12 @@
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {
-        "id": "sXAzUrSRBpK2",
-        "outputId": "966c57af-8d63-4f74-9c44-c8729b447794",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 123
-        }
+          "height": 140
+        },
+        "id": "sXAzUrSRBpK2",
+        "outputId": "966c57af-8d63-4f74-9c44-c8729b447794"
       },
       "outputs": [
         {
@@ -93,11 +93,11 @@
       "cell_type": "code",
       "execution_count": 13,
       "metadata": {
-        "id": "E_WvEOppBpK2",
-        "outputId": "cc3d09ec-6743-4fd4-923a-e89fb72ce8fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "E_WvEOppBpK2",
+        "outputId": "cc3d09ec-6743-4fd4-923a-e89fb72ce8fc"
       },
       "outputs": [
         {
@@ -121,11 +121,11 @@
       "cell_type": "code",
       "execution_count": 14,
       "metadata": {
-        "id": "4q2kSz1iBpK2",
-        "outputId": "45b5243e-709b-44fd-b99a-cdad7169e702",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4q2kSz1iBpK2",
+        "outputId": "45b5243e-709b-44fd-b99a-cdad7169e702"
       },
       "outputs": [
         {
@@ -152,11 +152,11 @@
       "cell_type": "code",
       "execution_count": 15,
       "metadata": {
-        "id": "l0gj1-zbBpK3",
-        "outputId": "44fa2eb3-4fc1-4af9-a34d-648d4a1604e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "l0gj1-zbBpK3",
+        "outputId": "44fa2eb3-4fc1-4af9-a34d-648d4a1604e7"
       },
       "outputs": [
         {
@@ -235,11 +235,11 @@
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
-        "id": "_gnZtBTjBpK3",
-        "outputId": "eb9f861b-86eb-4f90-8f8c-76b936c10654",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_gnZtBTjBpK3",
+        "outputId": "eb9f861b-86eb-4f90-8f8c-76b936c10654"
       },
       "outputs": [
         {
@@ -267,11 +267,11 @@
       "cell_type": "code",
       "execution_count": 17,
       "metadata": {
-        "id": "HaYEWxHuBpK3",
-        "outputId": "84f6bf7b-b136-4dc0-8c00-7beed59d0e3f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HaYEWxHuBpK3",
+        "outputId": "84f6bf7b-b136-4dc0-8c00-7beed59d0e3f"
       },
       "outputs": [
         {
@@ -302,11 +302,11 @@
       "cell_type": "code",
       "execution_count": 18,
       "metadata": {
-        "id": "aUdULRg6BpK4",
-        "outputId": "74ba509b-bddc-4504-f91f-43cecce57eb4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aUdULRg6BpK4",
+        "outputId": "74ba509b-bddc-4504-f91f-43cecce57eb4"
       },
       "outputs": [
         {
@@ -394,11 +394,11 @@
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
-        "id": "Ey3YmOoRBpK4",
-        "outputId": "d2c988cc-3139-458d-e458-481d9b271dc4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ey3YmOoRBpK4",
+        "outputId": "d2c988cc-3139-458d-e458-481d9b271dc4"
       },
       "outputs": [
         {
@@ -421,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 37,
       "metadata": {
         "id": "3VcviLSNBpK4"
       },
@@ -433,11 +433,68 @@
         "torch.manual_seed(1337)\n",
         "\n",
         "class BiLangModel(nn.Module):\n",
-        "  def __inti__(self, vocab_size)\n",
-        "    super().__init()\n",
+        "  def __init__(self, vocab_size):\n",
+        "    super().__init__()\n",
         "    self.token_embedding_table = nn.Embedding(vocab_size, vocab_size)\n",
         "\n",
-        ""
+        "  def forward(self, idx, targets=None):\n",
+        "    logits = self.token_embedding_table(idx) # (B,T,C)\n",
+        "\n",
+        "    if targets is None:\n",
+        "      loss=None\n",
+        "    else:\n",
+        "      B, T, C = logits.shape\n",
+        "      logits = logits.view(B*T, C)\n",
+        "      targets = targets.view(B*T)\n",
+        "      loss = F.cross_entropy(logits, targets)\n",
+        "\n",
+        "    return logits, loss\n",
+        "\n",
+        "  def generate(self, idx, max_new_tokens):\n",
+        "    # idx -> (B, T) -> array of indices : current context\n",
+        "    for _ in range(max_new_tokens):\n",
+        "      #predictions\n",
+        "      logits, loss = self(idx)\n",
+        "      #last time step\n",
+        "      logits = logits[:, -1, :] # (B, C)\n",
+        "      #applying softmax -> probabilities\n",
+        "      probs = F.softmax(logits, dim=-1) #(B, C)\n",
+        "      #sample\n",
+        "      idx_next = torch.multinomial(probs, num_samples=1) # (B, 1)\n",
+        "      #sampled index -> running sequence\n",
+        "      idx = torch.cat((idx, idx_next), dim=1) # (B, T+1)\n",
+        "    return idx"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m = BiLangModel(vocab_size)\n",
+        "logits, loss = m(xb, yb)\n",
+        "print(logits.shape)\n",
+        "print(loss)\n",
+        "\n",
+        "print(decode(m.generate(idx = torch.zeros((1, 1), dtype=torch.long), max_new_tokens=100)[0].tolist()))"
+      ],
+      "metadata": {
+        "id": "g3RdEzWcOIuR",
+        "outputId": "3166568b-fbe9-43d2-e057-71e566b2a3ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([32, 65])\n",
+            "tensor(4.8786, grad_fn=<NllLossBackward0>)\n",
+            "\n",
+            "Sr?qP-QWktXoL&jLDJgOLVz'RIoDqHdhsV&vLLxatjscMpwLERSPyao.qfzs$Ys$zF-w,;eEkzxjgCKFChs!iWW.ObzDnxA Ms$3\n"
+          ]
+        }
       ]
     },
     {
